<resources>

    <string name="action_menu">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search&#8230;</string>
    <string name="action_stats">Stats</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="share">Share</string>


    <string name="app_name">LetsAct</string>
    <string name="loginScreenTitleTextView"><b>Login</b></string>
    <string name="loginScreenSignInButton"><b>Sign In</b></string>
    <string name="loginScreenEmailEditTextHint">Email</string>

    <string name="signUpScreenDisplayFirstNameText">First Name</string>
    <string name="signUpScreenDisplayLastNameText">Last Name</string>
    <string name="signInScreenEmailEditTextHint">Email</string>
    <string name="signInScreenTitleTextView"><b>SignUp</b></string>
    <string name="signInScreenSignUpButton">SignUp</string>
    <string name="signUpScreenSchoolCodeHint">Your School Code</string>

    <string name="homeScreenStatsTextButton">STATS</string>
    <string name="homeScreenGroupTextButton">GROUPS</string>
    <string name="homeScreenJoinTextButton">JOIN</string>
    <string name="homeScreenCreateTextButton">CREATE</string>
    <string name="homeScreenSettingsTextButton">SETTINGS</string>
    <string name="homeScreenHiUserText"><b>Hello !</b></string>

    <string name="settingsScreenLogoutText"><b>Logout</b></string>
    <string name="settingsScreenPrivacyTextView"><b>Privacy</b></string>
    <string name="settingsScreenContactInfoTextView"><b>Contact Info</b></string>
    <string name="settingsScreenGPSEnabledTextView">GPS Enabled</string>
    <string name="settingsScreenExpandVolunteerRangeTextView">Expand GPS Radius</string>
    <string name="settingsScreenContactEmailTextView">Email:</string>
    <string name="settingsScreenContactFullNameTextView">Full Name:</string>

    <string name="statsScreenHoursGivenTextViewPlaceHolder">0</string>
    <string name="statsScreenHoursTextView">HOURS</string>
    <string name="statsScreenNoPastActivitiesTextView">Oh No! You Have No Past Activities</string>
    <string name="statsScreenPastActivityTitleTextView"><b>Past Activities</b></string>

    <string name="canHungerTitle">North Gwinnett Co-Op</string>
    <string name="canHungerTitle2">Can Hunger</string>
    <string name="canHungerDesc">Come help stop hunger in your community!</string>

    <string name="roadCleanUpTitle">Road Clean Up</string>
    <string name="roadCleanUpDescription">Make your roads shine this Sunday!</string>

    <string name="sugarHillRetireTitle">Help The Retired</string>
    <string name="sugarHillRetireDescription">Help your local retirees learn
        basic computer skills.</string>

    <string name="feedHomelessTitle">Feed The Homeless</string>

    <string name="northgwinnettcoopdesc">The North Gwinnett Co-Operative Ministries is a faith based organization that provides food, clothing, utility and prescription medication assistance to residents of Buford, Sugar Hill and Suwanee, GA. Please see "Our Services" page for more information.</string>
    <string name="create_event_FAB">create event</string>
    <string name="sponsor_events_header">Sponsor Events</string>
    <string name="local_events_header">Local Events</string>
    <string name="join_event_button">Join Event</string>
    <string name="event_image_description">Event Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_event_title">Create Event</string>
    <string name="password_hint">Password</string>
    <string name="my_events_header">My Events</string>
</resources>
