<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/actionMenu"-->
        <!--android:icon="@drawable/ic_menu_black_24dp"-->
        <!--android:title="@string/action_menu"-->
        <!--app:showAsAction="always"-->
        <!--android:orderInCategory="1"-->

        <!--/>-->

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

    <group>
        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            app:showAsAction="never"
            android:orderInCategory="1"
            />

        <item
            android:id="@+id/action_stats"
            android:title="@string/action_stats"
            app:showAsAction="never"
            android:orderInCategory="2"
            />

        <item
            android:id="@+id/action_sign_out"
            android:title="@string/action_sign_out"
            app:showAsAction="never"
            android:orderInCategory="3"
            />
    </group>


</menu>