<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="andrew.com.hackathon_2018.HomeScreen">

    <LinearLayout
        android:id="@+id/homeScreenNavigationScrollBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/indigo"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/homeScreenSettingsTextButton"
            android:id="@+id/homeScreenSettingsTextButton"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/homeScreenStatsTextButton"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/homeScreenGroupTextButton"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/homeScreenJoinTextButton"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/homeScreenCreateTextButton"
            android:id="@+id/homeScreenCreateTextButton"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeScreenNavigationScrollBar"
        android:layout_margin="15dp"
        android:text="@string/homeScreenHiUserText"
        android:textSize="24sp"
        android:textColor="@color/lightBlue"
        android:id="@+id/homeScreenHiUserTextView"
        />

</RelativeLayout>
