<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="andrew.com.lets_act.Settings"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsScreenPrivacyTextView"
            android:textSize="24sp"
            android:textColor="@color/darkRed"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/encodesans_extralight"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsScreenGPSEnabledTextView"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/encodesans_extralight"
            />

            <Switch
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsScreenExpandVolunteerRangeTextView"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/encodesans_extralight"
                />

            <Switch
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsScreenContactInfoTextView"
            android:textSize="24sp"
            android:textColor="@color/darkRed"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/encodesans_extralight"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsScreenContactEmailTextView"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/encodesans_extralight"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settingScreenUserEmailTextView"
                android:text=""
                android:layout_alignParentRight="true"
                android:fontFamily="@font/encodesans_extralight"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsScreenContactFullNameTextView"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/encodesans_extralight"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settingScreenUserFullNameTextView"
                android:text=""
                android:layout_alignParentRight="true"
                android:fontFamily="@font/encodesans_extralight"/>

        </RelativeLayout>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/logoutButton"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:text="@string/settingsScreenLogoutText"
        android:textColor="@android:color/white"
        android:background="@drawable/logout_button_design"
        android:elevation="30dp"
        android:fontFamily="@font/encodesans_extralight"/>
</RelativeLayout>
