<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="andrew.com.hackathon_2018.Stats"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:clipChildren="false"
    android:clipToPadding="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/lightPink"
        android:textSize="64sp"
        android:text="@string/statsScreenHoursGivenTextViewPlaceHolder"
        android:id="@+id/statScreenShowHoursTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statScreenShowHoursTextView"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/statsScreenHoursTextView"
        android:id="@+id/statScreenHoursTextView"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/statScreenHoursTextView"
        android:background="@android:color/black"
        android:id="@+id/statScreenTopLineView"
        android:elevation="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/indigo"
        android:textSize="24sp"
        android:layout_below="@id/statScreenTopLineView"
        android:layout_margin="15dp"
        android:text="@string/statsScreenPastActivityTitleTextView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:text="@string/statsScreenNoPastActivitiesTextView"
        android:layout_above="@id/statScreenBottomLineView"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:padding="4dp"
        android:elevation="2dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@android:color/black"
        android:id="@+id/statScreenBottomLineView"/>


</RelativeLayout>
